# paparazzi

./: README.md
backend/: .env  .env.development  .gitignore  Makefile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml
backend/docker/beat/: Dockerfile
backend/docker/server/: Dockerfile
backend/docker/worker/: Dockerfile
backend/scripts/: init.sh
backend/scripts/localstack/: s3.sh
backend/src/: celeryworker.py  config.py  log.py  run_gunicorn.py  server.py
backend/src/constants/: __init__.py  run.py  step.py  test.py
backend/src/exceptions/: __init__.py  database.py
backend/src/jobs/: __init__.py  tasks.py
backend/src/models/: __init__.py  base.py  run.py  step.py  test.py
backend/src/repositories/: base.py  run.py  step.py  test.py
backend/src/resources/: base.py  health.py  run.py  step.py  test.py
backend/src/schemas/: __init__.py  base.py  run.py  step.py  test.py
backend/src/util/: id.py  s3.py
client-script/: .env.production  .prettierignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client-script/src/: index.tsx  recorder.css  recorder.tsx
client-script/src/backup/: test-recorder.ts
client-script/src/config/: index.ts
client-script/src/mocks/: handlers.ts
client-script/src/services/: index.ts  step.ts  test.ts
client-script/src/types/: global.d.ts  index.ts
client-script/src/utils/: debounce.ts  index.ts  objectId.ts  screenshot.ts
frontend-console/: README.md
